--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,7 +154,7 @@ h6 {
   font-weight: 300;
   letter-spacing: 1px;
   /* text-transform: uppercase; */
-  font-family: cursive;
+  font-family: "Henny Penny", cursive, sans-serif;
 }
 
 #header .logo span {
@@ -431,11 +431,11 @@ h6 {
 
 #hero h1 {
   margin: 0;
-  font-size: 40px;
+  font-size: 60px;
   font-weight: 1000;
   line-height: 56px;
   color: #fff;
-  font-family: fantasy;
+  font-family: "Henny Penny", fantasy, sans-serif;
 }
 
 #hero h1 span {
@@ -582,7 +582,7 @@ h6 {
 
 @media (max-width: 768px) {
   #hero h1 {
-    font-size: 24px;
+    font-size: 34px;
     line-height: 36px;
   }
 
@@ -658,7 +658,7 @@ section {
   margin: 0;
   font-size: 46px;
   font-weight: 700;
-  font-family: fantasy;
+  font-family: "Henny Penny", fantasy, sans-serif;
   color: #da1419;
 }
 
@@ -731,7 +731,7 @@ section {
   font-weight: 700;
   color: #da1419;
   margin-bottom: 20px;
-  font-family: cursive;
+  font-family: "Henny Penny", cursive, sans-serif;
 }
 
 .students .box h4 {
@@ -774,7 +774,7 @@ section {
 
 #program h2 span {
   color: #da1419;
-  font-family: cursive;
+  font-family: "Henny Penny", cursive, sans-serif;
 }
 
 .card {
@@ -818,7 +818,7 @@ section {
 }
 
 .program .program-item {
-  margin-top: 50px;
+  margin-top: 25px;
 }
 
 .program .program-content {
@@ -1036,7 +1036,7 @@ section {
 }
 
 #footer h3 {
-  font-family: cursive;
+  font-family: "Henny Penny", cursive, sans-serif;
   font-size: 44px;
 }
 
